--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Accio Jobs!</h1>
+	<a href ="https://acciojob.com/blog/">Blog</a>
+	<br>
+	<img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmxvZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="200px">
+	<br>
+	<a href ="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+	<p>We can say that optimization is...</p>
+	<img src="https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8YmxvZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="200px">
+	<br>
+	<a href ="https://acciojob.com/blog/dsa-vs-competitive-programming/">	DSA vs. Competitive Programming</a>
+	<p>DSA or Competitive programming?...</p>
+	<img src="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8YmxvZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="200px">
+	<br>
+	<a href ="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
+	<p>As a job seeker, you may wonder...</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
