--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Welcome to Accio Jobs!</h1>
+	<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 	<a href ="https://acciojob.com/blog/">Blog</a>
 	<br>
 	<img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmxvZ3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="200px">
